[project]
name = "schemix-orm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Ethan Coward", email = "ethan@ethancoward.dev" }
]
requires-python = ">=3.13"
dependencies = ["schemix"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["packages/*"]

[tool.hatch.build.targets.sdist]
include = ["packages/*"]

[tool.uv]
default-groups = "all"

[tool.uv.sources]
schemix = { workspace = true }
schemix-mypy = { workspace = true }

[tool.uv.workspace]
members = [
    "packages/schemix",
    "packages/schemix-mypy",
]

[dependency-groups]
aiosqlite = [
    "aiosqlite>=0.21.0",
]
asyncpg = [
    "asyncpg>=0.30.0",
    "asyncpg-stubs>=0.30.1",
]
dev = [
    "mypy>=1.16.0",
    "ruff>=0.11.12",
]

[tool.ruff]
line-length = 100
target-version = "py313"
src = ["packages"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long, handled by formatter
]

[tool.mypy]
# plugins = ["schemix-mypy"]
python_version = "3.13"
# Force mypy to check all function bodies
check_untyped_defs = true
disallow_untyped_defs = false
# This helps with async function analysis
warn_return_any = true
exclude = ["packages/schemix-mypy/.*"]